test/errors/test_invalid_mode.jl
include("../utils.jl")

@test_throws ErrorException broker(mode="invalid_mode")
